initial/target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'continue'", 
                     "'else'", "'for'", "'float'", "'if'", "'int'", "'return'", 
                     "'void'", "'do'", "'while'", "'true'", "'false'", "'string'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'!'", "'%'", 
                     "'||'", "'&&'", "'!='", "'=='", "'<'", "'>'", "'<='", 
                     "'>='", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'.'", "';'", "','", "'_'" ]

    symbolicNames = [ "<INVALID>", "BOOLEANTYPE", "BREAK", "CONTINUE", "ELSE", 
                      "FOR", "FLOATTYPE", "IF", "INTTYPE", "RETURN", "VOIDTYPE", 
                      "DO", "WHILE", "TRUE", "FALSE", "STRINGTYPE", "ID", 
                      "ADD", "SUB", "MUL", "DIV", "NOT", "MOD", "OR", "AND", 
                      "NEQ", "EQ", "LESS", "GRATER", "LEQ", "GEQ", "ASSIGN", 
                      "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "LP", 
                      "RP", "LB", "RB", "LSB", "RSB", "DOT", "SEMI", "CM", 
                      "UNDERSCORE", "BLOCK_COMMENT", "LINE_COMMENT", "WS", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydecls = 1
    RULE_decl = 2
    RULE_variable_decl = 3
    RULE_primitive_type = 4
    RULE_many_variables = 5
    RULE_variable = 6
    RULE_function_decl = 7
    RULE_func_type = 8
    RULE_parameter_list = 9
    RULE_parameter_tail = 10
    RULE_parameter_decl = 11
    RULE_var_stmt_list = 12
    RULE_var_stmt_tail = 13
    RULE_var_stmt = 14
    RULE_array = 15
    RULE_array_pointer_type = 16
    RULE_input_para = 17
    RULE_output_para = 18
    RULE_expr = 19
    RULE_expr1 = 20
    RULE_expr2 = 21
    RULE_expr3 = 22
    RULE_expr4 = 23
    RULE_expr5 = 24
    RULE_expr6 = 25
    RULE_expr7 = 26
    RULE_expr8 = 27
    RULE_expr9 = 28
    RULE_operands = 29
    RULE_literal = 30
    RULE_array_element = 31
    RULE_func_call = 32
    RULE_exprlist = 33
    RULE_exprtail = 34
    RULE_statement = 35
    RULE_if_stmt = 36
    RULE_if_else = 37
    RULE_if_no_else = 38
    RULE_dowhile_stmt = 39
    RULE_for_stmt = 40
    RULE_break_stmt = 41
    RULE_continue_stmt = 42
    RULE_return_stmt = 43
    RULE_expr_stmt = 44
    RULE_block_statement = 45

    ruleNames =  [ "program", "manydecls", "decl", "variable_decl", "primitive_type", 
                   "many_variables", "variable", "function_decl", "func_type", 
                   "parameter_list", "parameter_tail", "parameter_decl", 
                   "var_stmt_list", "var_stmt_tail", "var_stmt", "array", 
                   "array_pointer_type", "input_para", "output_para", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "expr9", "operands", "literal", "array_element", 
                   "func_call", "exprlist", "exprtail", "statement", "if_stmt", 
                   "if_else", "if_no_else", "dowhile_stmt", "for_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "expr_stmt", 
                   "block_statement" ]

    EOF = Token.EOF
    BOOLEANTYPE=1
    BREAK=2
    CONTINUE=3
    ELSE=4
    FOR=5
    FLOATTYPE=6
    IF=7
    INTTYPE=8
    RETURN=9
    VOIDTYPE=10
    DO=11
    WHILE=12
    TRUE=13
    FALSE=14
    STRINGTYPE=15
    ID=16
    ADD=17
    SUB=18
    MUL=19
    DIV=20
    NOT=21
    MOD=22
    OR=23
    AND=24
    NEQ=25
    EQ=26
    LESS=27
    GRATER=28
    LEQ=29
    GEQ=30
    ASSIGN=31
    INTLIT=32
    FLOATLIT=33
    BOOLEANLIT=34
    STRINGLIT=35
    LP=36
    RP=37
    LB=38
    RB=39
    LSB=40
    RSB=41
    DOT=42
    SEMI=43
    CM=44
    UNDERSCORE=45
    BLOCK_COMMENT=46
    LINE_COMMENT=47
    WS=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.manydecls()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manydecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydecls" ):
                return visitor.visitManydecls(self)
            else:
                return visitor.visitChildren(self)




    def manydecls(self):

        localctx = MCParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecls)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.decl()
                self.state = 95
                self.manydecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(MCParser.Variable_declContext,0)


        def function_decl(self):
            return self.getTypedRuleContext(MCParser.Function_declContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.variable_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.function_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def many_variables(self):
            return self.getTypedRuleContext(MCParser.Many_variablesContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = MCParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.primitive_type()
            self.state = 105
            self.many_variables()
            self.state = 106
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MCParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_variablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(MCParser.VariableContext,0)


        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def many_variables(self):
            return self.getTypedRuleContext(MCParser.Many_variablesContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_many_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_variables" ):
                return visitor.visitMany_variables(self)
            else:
                return visitor.visitChildren(self)




    def many_variables(self):

        localctx = MCParser.Many_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_many_variables)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.variable()
                self.state = 111
                self.match(MCParser.CM)
                self.state = 112
                self.many_variables()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MCParser.ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LSB:
                self.state = 118
                self.match(MCParser.LSB)
                self.state = 119
                self.match(MCParser.INTLIT)
                self.state = 120
                self.match(MCParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_type(self):
            return self.getTypedRuleContext(MCParser.Func_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MCParser.Parameter_listContext,0)


        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_function_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_decl" ):
                return visitor.visitFunction_decl(self)
            else:
                return visitor.visitChildren(self)




    def function_decl(self):

        localctx = MCParser.Function_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.func_type()
            self.state = 124
            self.match(MCParser.ID)
            self.state = 125
            self.match(MCParser.LP)
            self.state = 126
            self.parameter_list()
            self.state = 127
            self.match(MCParser.RP)
            self.state = 128
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_type" ):
                return visitor.visitFunc_type(self)
            else:
                return visitor.visitChildren(self)




    def func_type(self):

        localctx = MCParser.Func_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_type)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.primitive_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_decl(self):
            return self.getTypedRuleContext(MCParser.Parameter_declContext,0)


        def parameter_tail(self):
            return self.getTypedRuleContext(MCParser.Parameter_tailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = MCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 135
                self.parameter_decl()
                self.state = 136
                self.parameter_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def parameter_decl(self):
            return self.getTypedRuleContext(MCParser.Parameter_declContext,0)


        def parameter_tail(self):
            return self.getTypedRuleContext(MCParser.Parameter_tailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_parameter_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_tail" ):
                return visitor.visitParameter_tail(self)
            else:
                return visitor.visitChildren(self)




    def parameter_tail(self):

        localctx = MCParser.Parameter_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.CM:
                self.state = 140
                self.match(MCParser.CM)
                self.state = 141
                self.parameter_decl()
                self.state = 142
                self.parameter_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_parameter_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_decl" ):
                return visitor.visitParameter_decl(self)
            else:
                return visitor.visitChildren(self)




    def parameter_decl(self):

        localctx = MCParser.Parameter_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.primitive_type()
            self.state = 147
            self.match(MCParser.ID)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LSB:
                self.state = 148
                self.match(MCParser.LSB)
                self.state = 149
                self.match(MCParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_stmt(self):
            return self.getTypedRuleContext(MCParser.Var_stmtContext,0)


        def var_stmt_tail(self):
            return self.getTypedRuleContext(MCParser.Var_stmt_tailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_stmt_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stmt_list" ):
                return visitor.visitVar_stmt_list(self)
            else:
                return visitor.visitChildren(self)




    def var_stmt_list(self):

        localctx = MCParser.Var_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.IF) | (1 << MCParser.INTTYPE) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.LP) | (1 << MCParser.LB))) != 0):
                self.state = 152
                self.var_stmt()
                self.state = 153
                self.var_stmt_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmt_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_stmt(self):
            return self.getTypedRuleContext(MCParser.Var_stmtContext,0)


        def var_stmt_tail(self):
            return self.getTypedRuleContext(MCParser.Var_stmt_tailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_stmt_tail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stmt_tail" ):
                return visitor.visitVar_stmt_tail(self)
            else:
                return visitor.visitChildren(self)




    def var_stmt_tail(self):

        localctx = MCParser.Var_stmt_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_var_stmt_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.IF) | (1 << MCParser.INTTYPE) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.LP) | (1 << MCParser.LB))) != 0):
                self.state = 157
                self.var_stmt()
                self.state = 158
                self.var_stmt_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(MCParser.Variable_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(MCParser.StatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stmt" ):
                return visitor.visitVar_stmt(self)
            else:
                return visitor.visitChildren(self)




    def var_stmt(self):
